[package]
name = "captr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
image = "0.24.5"
minimp4 = "0.1.0"
openh264 = "0.2.11"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
